Edit view is working along with the actions.

--- a/SuperHeros/SuperHeros.csproj
+++ b/SuperHeros/SuperHeros.csproj
@@ -274,6 +274,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\SuperHero\Create.cshtml" />
     <Content Include="Views\SuperHero\Index.cshtml" />
+    <Content Include="Views\SuperHero\Details.cshtml" />
+    <Content Include="Views\SuperHero\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
